MODINREACH-583: improve log statements
(cherry picked from commit 823381bb0b16062cac86a76264d76f67228538d8)