@@ -22,7 +22,7 @@ public class RequestPreferenceServiceImpl implements RequestPreferenceService {
     var requestPreferences = client.getUserRequestPreference(userId);
     Assert.isTrue(requestPreferences.getTotalRecords() == 1, "Could not retrieve 1 request preferences" +
       "record for userId = " + userId);
-    log.info("findUserRequestPreference:: result: {}", requestPreferences.getResult().get(0));
-    return requestPreferences.getResult().get(0);
+
+    return requestPreferences.getResult().getFirst();
   }
 }
